# agentkit

./: .gitignore  .mcp.json  AGENT-LIFECYCLE.md  CODE_REVIEW_UNISWAP_V4.md  CONTRIBUTING-PYTHON.md  CONTRIBUTING-TYPESCRIPT.md  CONTRIBUTING.md  README.md  SECURITY.md  WISHLIST.md  agentchatbot  ai  generatetext  myaiagent  node  package-lock.json  package.json  patch1  test_x402search.py  test_x402search_e2e.py
.changes/: 882.fixed.md
.changeset/: add-policycheck-provider.md
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  labeler.yml  rerun-ci-2026-01-03-035556
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml
.github/workflows/: changelog.yml  codeql.yml  format.yml  labeler.yml  lint.yml  publish_docs.yml  publish_nightly.yml  publish_npm_create_onchain_agent.yml  publish_npm_manual.yml  publish_pypi_coinbase_agentkit.yml  publish_pypi_coinbase_agentkit_autogen.yml  publish_pypi_coinbase_agentkit_crewai.yml  publish_pypi_coinbase_agentkit_langchain.yml  publish_pypi_coinbase_agentkit_openai_agents_sdk.yml  publish_pypi_coinbase_agentkit_pydantic_ai.yml  publish_pypi_coinbase_agentkit_strands_agents.yml  publish_pypi_create_onchain_agent.yml  unit_tests.yml  version_publish_npm.yml
cdp-agentkit-core/python/: CHANGELOG.md  pyproject.toml
cdp-agentkit-core/typescript/: CHANGELOG.md  package.json
cdp-agentkit-core/typescript/src/: index.ts
cdp-langchain/examples/chatbot-python/: README.md
cdp-langchain/python/: CHANGELOG.md
python/: README.md
python/coinbase-agentkit/: CHANGELOG.md  Makefile  README.md  pyproject.toml
python/coinbase-agentkit/changelog.d/: +14ef2776.feature.md  +agent-226.bugfix.md  218191.feature.md  2c6b728.feature.md  3dac7f0.feature.md  52b0f51.feature.md  535.bugfix.md  65a92f.feature.md  946.bugfix.md  94cf21.feature.md  add-blockrun-action-provider.feature.md  add-hyperlane-action-provider.feature.md  add-pendle-action-provider.feature.md  add-radius-network.feature.md  add-sardis-action-provider.feature.md  e58cec.bugfix.md
python/coinbase-agentkit/coinbase_agentkit/: __init__.py  __version__.py
python/coinbase-agentkit/docs/: conf.py  upgrading-0.4-to-0.6.md
python/coinbase-agentkit/scripts/: README.md  args.py  config.py  constants.py  create_action_provider.py  prompts.py  types.py  utils.py
python/create-onchain-agent/: CHANGELOG.md  README.md
python/create-onchain-agent/changelog.d/: add-radius-network.feature.md
python/create-onchain-agent/create_onchain_agent/: cli.py
python/examples/advertisements-agent-with-strands-agents-x402-cdp-chatbot/: README.md  chatbot.py  pyproject.toml
python/examples/autogen-cdp-chatbot/: chatbot.py  pyproject.toml
python/examples/crew-ai-cdp-chatbot/: .env.local  Makefile  README.md  chatbot.py  pyproject.toml
python/examples/langchain-cdp-chatbot/: .env.local  chatbot.py  pyproject.toml
python/examples/langchain-cdp-chatbot-with-aws-bedrock/: .env.local  README.md  chatbot.py
python/examples/langchain-cdp-chatbot-with-nillion-secretvault/: README.md  chatbot.py
python/examples/langchain-cdp-server-chatbot/: chatbot.py  pyproject.toml
python/examples/langchain-cdp-smart-wallet-chatbot/: .env.local  chatbot.py
python/examples/langchain-desk-chatbot/: .env.local  README.md  chatbot.py  openrouter.py  pyproject.toml
python/examples/langchain-eth-account-chatbot/: chatbot.py
python/examples/langchain-nillion-secretvault-chatbot/: pyproject.toml
python/examples/langchain-smart-wallet-chatbot/: chatbot.py
python/examples/langchain-twitter-chatbot/: chatbot.py
python/examples/openai-agents-cdp-voice-chatbot/: Makefile  README.md  pyproject.toml
python/examples/openai-agents-sdk-cdp-chatbot/: chatbot.py  pyproject.toml
python/examples/openai-agents-sdk-cdp-voice-chatbot/: my_workflow.py
python/examples/openai-agents-sdk-smart-wallet-chatbot/: chatbot.py  openai-agents-model-context-protocol-smart-wallet-server.py
python/examples/pydantic-ai-cdp-chatbot/: pyproject.toml
python/examples/strands-agents-cdp-server-chatbot/: .env.local  README.md  chatbot.py  (+1 more)
python/framework-extensions/crewai/: CHANGELOG.md  Makefile  README.md  pyproject.toml
python/framework-extensions/crewai/changelog.d/: 318.feature.md
python/framework-extensions/crewai/coinbase_agentkit_crewai/: __init__.py  crewai_tools.py
python/framework-extensions/crewai/tests/: conftest.py
python/framework-extensions/crewai/tests/crewai_tools/: __init__.py  conftest.py  test_get_crewai_tools.py
python/framework-extensions/gpubridge/: README.md  pyproject.toml
python/framework-extensions/gpubridge/coinbase_agentkit_gpubridge/: __init__.py  action_provider.py
python/framework-extensions/mcp/: pyproject.toml  setup.py.old
python/framework-extensions/mcp/coinbase_agentkit_mcp/: Makefile  test_server.py
python/scripts/: version.py  version_phase_1.sh  version_phase_2.sh
quickstarts/: Authentication.ipynb
typescript/: .npmrc  README.md  jest.config.base.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
typescript/.changeset/: add-agenttax-action-provider.md  add-radius-network.md  add-waap-wallet-provider.md  add-x402station-action-provider.md  agora402-escrow-provider.md  big-ads-swim.md  bob-gateway-action-provider.md  bright-dingos-approve.md  common-spies-smoke.md  dark-llamas-strive.md  dexscreener-action-provider.md  dtelecom-voice-provider.md  easy-yaks-retire.md  fix-recursive-zod-schema-refs.md  flipcoin-action-provider.md  hungry-gifts-wonder.md  kind-terms-spend.md  lazy-hornets-kiss.md  legal-masks-lie.md  mean-cooks-tan.md  neat-tables-sort.md  nine-planets-march.md  paycrow-action-provider.md  privy-evm-embedded-wallet.md  proud-habits-shine.md  provider-agnostic-templates.md  quick-ravens-act.md  real-hounds-juggle.md  strong-games-fold.md  uniswap-v4-action-provider.md  warm-wallets-verify.md
typescript/agentkit/: CHANGELOG.md  README.md  jest.config.cjs  package-lock.json  package.json  tsconfig.json
typescript/create-onchain-agent/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
(+886 files in other folders)
