[tool.poetry]
name = "openai-agents-cdp-voice-chatbot"
version = "0.0.1"
description = "OpenAI Agents CDP Voice Chatbot Example"
authors = ["Ryan Gilbert <ryan.gilbert@coinbase.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
coinbase-agentkit = { path = "../../../python/coinbase-agentkit", develop = true }
coinbase-agentkit-openai-agents-sdk = { path = "../../../python/framework-extensions/openai-agents-sdk", develop = true }
openai = "^1.68.0"
pydantic = "^2.10"
griffe = "^1.6.2"
typing-extensions = "^4.12.2"
requests = "^2.32.3"
types-requests = "^2.32.0"
rich = "^13.9.4"
pynput = "^1.8.1"
types-pynput = "^1.8.1"
sounddevice = "^0.5.1"
textual = "^2.1.2"
numpy = "^2.2.4"
websockets = "^15.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 

[tool.openai-agents-cdp-voice-chatbot]
private = true

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["./build/**", "./dist/**", "./docs/**"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "D", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["D213", "D203", "D100", "D104", "D107", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["coinbase_agentkit, cdp"]
